# mlproj-masters

./: README.md  notes.md  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
src/funcs/: data_import.py  feature_selection.py  preprocessing.py
