[project]
name = "mlproj-masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
