[project]
name = "mlproj-masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
