[project]
name = "mlproj-masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["ruff>=0.13.2"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",
    "FIX",
    "COM812",
    "D100",
    "D104",
    "E501",
    'ERA001',
    "S101",
    "TD003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
